# python_backend_api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: docker-compose.dev.yml
pyapi/: __init__.py  __main__.py  gunicorn_runner.py  log.py  settings.py
pyapi/db/: auth_models.py  dao.py  dependencies.py  meta.py  models.py
pyapi/schemas/: auth_schemas.py  data_schemas.py
pyapi/services/: __init__.py  auth_service.py  data_service.py
pyapi/utils/: auth.py  dependencies.py
pyapi/web/: __init__.py  application.py  lifespan.py
pyapi/web/api/: __init__.py  auth.py  data.py  docs.py  monitoring.py  router.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py
